# canapy

./: .gitignore  README.html  README.md  Tutorial_annotating_with_canapy.ipynb  debug.py  main.py  pyproject.toml  requirements.txt  setup.py  test.py
audacity/: aup.py  main.py
canapy/: __init__.py  config.py  config.toml  corpus.py  dataset.py  log.py  utils.py
canapy-old/: __init__.py  __main__.py  dataset.py  model.py  processor.py  sequence.py
canapy-old/audacity/: __main__.py
canapy-old/config/: __init__.py
canapy-old/dashboard/: __init__.py  app.py  controler.py  eval_dash.py  export_dash.py  helpers.py  train_dash.py
canapy-old/output/: annotations.json
canapy/annotator/: __init__.py  annotator.py  base.py  ensemble.py  nsynannotator.py  synannotator.py
canapy/cli/: __init__.py  main.py
canapy/correction/: __init__.py  base.py
canapy/formats/: __init__.py  marron1csv.py
canapy/metrics/: __init__.py  base.py  utils.py
canapy/model/: base.py  nsynmodel.py  synmodel.py
canapy/plots/: base.py
canapy/timings/: base.py
canapy/transforms/: __init__.py  base.py  dataset.py  nsynesn.py  synesn.py
canapy/utils/: __init__.py  arrays.py  exceptions.py  tempstorage.py
config/: __init__.py  config.py
config/template/: default.config.toml
dashboard/: __init__.py  __main__.py  app.py  browse.py  dashboardtest.py  home.py  main.py
dashboard/controler/: __init__.py  base.py  controler.py  corpusutils.py  (+3 more)
tests/: config.toml  config_2.toml  conftest.py  test_annotator.py  test_docstringable.py  test_model.py  test_processor.py  test_transforms.py
(+144 files in other folders)
